--- a/.github/workflows/run_pytest.yml
+++ b/.github/workflows/run_pytest.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest selenium pytest-html
+          pip install pytest selenium pytest-html pip install webdriver-manager
 
       - name: Run Pytest with HTML Report
         run: |
