--- a/.github/workflows/run_pytest.yml
+++ b/.github/workflows/run_pytest.yml
@@ -19,9 +19,9 @@ jobs:
           python-version: 3.8
 
       - name: Install dependencies
-        run: |
+        run:  |
           python -m pip install --upgrade pip
-          pip install pytest selenium pytest-html pip install webdriver-manager
+          pip install pytest selenium pytest-html webdriver-manager
 
       - name: Run Pytest with HTML Report
         run: |
